--- a/packages/web/index.html
+++ b/packages/web/index.html
@@ -48,7 +48,7 @@
         --caret-color: #0ea5e9;
       }
     </style>
-    <script type="module" src="/src/index.ts"></script>
+    <script type="module" src="/dist/index.js"></script>
     <div style="width: 500px; height: 400px; border: 1px solid #222">
       <markprompt-content class="dark" />
     </div>
