--- a/examples/with-markprompt-web/index.html
+++ b/examples/with-markprompt-web/index.html
@@ -2,12 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/markprompt.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Markprompt + Vite + TS</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <main>
+        <p>Click the Markprompt button ↘️</p>
+      </main>
+      <div id="markprompt"></div>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
