Add a dialog trigger with the appearance of a search input

--- a/examples/with-markprompt-web/index.html
+++ b/examples/with-markprompt-web/index.html
@@ -9,9 +9,11 @@
   <body>
     <div id="app">
       <main>
-        <p>Click the Markprompt button ↘️</p>
+        <div class="centered">
+          <p>Click the Markprompt button ↘️</p>
+          <div id="markprompt"></div>
+        </div>
       </main>
-      <div id="markprompt"></div>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
