--- a/examples/with-custom-trigger-react/index.html
+++ b/examples/with-custom-trigger-react/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/markprompt.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Markprompt + Custom Trigger</title>
+    <title>Markprompt + Custom Trigger + React</title>
   </head>
   <body>
     <div id="root"></div>
