Update with-init example and @markprompt/web readme to use esm.sh

--- a/examples/with-init/index.html
+++ b/examples/with-init/index.html
@@ -8,6 +8,12 @@
   </head>
   <body>
     <div id="app"></div>
+
+    <!-- 1. Set window.markprompt -->
     <script type="module" src="/src/main.ts"></script>
+
+    <!-- 2. Load Markprompt -->
+    <link rel="stylesheet" href="https://esm.sh/@markprompt/css?css" />
+    <script type="module" src="https://esm.sh/@markprompt/web/init"></script>
   </body>
 </html>
