--- a/examples/with-init/index.html
+++ b/examples/with-init/index.html
@@ -10,7 +10,7 @@
     <div id="app"></div>
 
     <!-- 1. Set window.markprompt -->
-    <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="./src/main.ts"></script>
 
     <!-- 2. Load Markprompt -->
     <link rel="stylesheet" href="https://esm.sh/@markprompt/css?css" />
