Add chat history sidebar

--- a/examples/with-standalone-chat/index.html
+++ b/examples/with-standalone-chat/index.html
@@ -4,10 +4,21 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + TS</title>
+    <title>Markprompt Chat + Vite + TS</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <aside>
+        <img
+          src="/markprompt.svg"
+          alt="Markprompt"
+          loading="lazy"
+          width="64"
+          height="64"
+        />
+      </aside>
+      <div id="markprompt-chat"></div>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
