--- a/examples/with-standalone-chat/index.html
+++ b/examples/with-standalone-chat/index.html
@@ -9,13 +9,15 @@
   <body>
     <div id="app">
       <aside>
-        <img
-          src="/markprompt.svg"
-          alt="Markprompt"
-          loading="lazy"
-          width="64"
-          height="64"
-        />
+        <a href="https://markprompt.com/" target="_blank" rel="noopener">
+          <img
+            src="/markprompt.svg"
+            alt="Markprompt"
+            loading="lazy"
+            width="64"
+            height="64"
+          />
+        </a>
       </aside>
       <div id="markprompt-chat"></div>
     </div>
