--- a/examples/with-markprompt-web/index.html
+++ b/examples/with-markprompt-web/index.html
@@ -10,7 +10,7 @@
     <div id="app">
       <main>
         <div class="centered">
-          <p>Click the Markprompt button ↘️</p>
+          <p>Click the chat button</p>
           <div id="markprompt"></div>
         </div>
       </main>
