--- a/examples/with-markprompt-web/index.html
+++ b/examples/with-markprompt-web/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Markprompt + Vite + TS</title>
+    <title>Markprompt Web Component</title>
     <link rel="icon" type="image/svg+xml" href="/markprompt.svg" />
   </head>
   <body>
