--- a/examples/with-markprompt-web/index.html
+++ b/examples/with-markprompt-web/index.html
@@ -9,7 +9,7 @@
   <body>
     <div id="app">
       <main>
-        <div class="centered">
+        <div id="message">
           <p>Click the chat button</p>
           <div id="markprompt"></div>
         </div>
