--- a/examples/with-markprompt-web/index.html
+++ b/examples/with-markprompt-web/index.html
@@ -3,16 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Markprompt + Vite + TS</title>
+    <title>Markprompt Web Component</title>
     <link rel="icon" type="image/svg+xml" href="/markprompt.svg" />
   </head>
   <body>
     <div id="app">
       <main>
-        <div class="centered">
-          <p>Click the Markprompt button ↘️</p>
-          <div id="markprompt"></div>
+        <div id="message">
+          <p>Click the chat button</p>
         </div>
+        <div id="markprompt"></div>
       </main>
     </div>
     <script type="module" src="/src/main.ts"></script>
