Add chatbot example

--- a/examples/with-embed/embed.html
+++ b/examples/with-embed/embed.html
@@ -27,6 +27,6 @@
     "
   >
     <div id="markprompt-container"></div>
-    <script src="https://markprompt.com/embed/<YOUR-EMBED-CODE>" />
+    <script src="https://markprompt.com/embed/<YOUR-EMBED-CODE>"></script>
   </body>
 </html>
