--- a/examples/with-embed/chatbot.html
+++ b/examples/with-embed/chatbot.html
@@ -17,6 +17,6 @@
       height: 100vh;
     "
   >
-    <script src="https://markprompt.com/embed/<YOUR-EMBED-CODE>"></script>
+    <script src="https://markprompt.com/embed/popup/<YOUR_EMBED_CODE>"></script>
   </body>
 </html>
