--- a/examples/with-embed/embed.html
+++ b/examples/with-embed/embed.html
@@ -6,7 +6,7 @@
         background-color: #fafafa;
         overflow: hidden;
       }
-      #markprompt-container {
+      .markprompt-container {
         border: 1px solid #e5e5e5;
         border-radius: 0.5rem;
         overflow: hidden;
@@ -26,7 +26,9 @@
       height: 100vh;
     "
   >
-    <div id="markprompt-container"></div>
-    <script src="https://markprompt.com/embed/<YOUR-EMBED-CODE>"></script>
+    <div
+      id="markprompt-container-<YOUR_EMBED_CODE>"
+      class="markprompt-container"></div>
+    <script src="https://markprompt.com/embed/<YOUR_EMBED_CODE>"></script>
   </body>
 </html>
