--- a/examples/with-custom-ui/index.html
+++ b/examples/with-custom-ui/index.html
@@ -7,10 +7,7 @@
     <link rel="icon" type="image/svg+xml" href="/markprompt.svg" />
   </head>
   <body>
-    <div id="app">
-      <!-- The Welcome component will be rendered here -->
-    </div>
-    <div id="markprompt"></div>
+    <div id="app"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
